# go/model_nest_joboffer.go
@@ -1,0 +1,36 @@
+/*
+ * job_offer
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type NestJoboffer struct {
+
+	// 対象の県コード
+	PrefCode string `json:"prefCode,omitempty"`
+
+	// 対象の県名
+	PrefName string `json:"prefName,omitempty"`
+
+	// 年度
+	Year string `json:"year,omitempty"`
+
+	// 表示内容
+	Matter string `json:"matter,omitempty"`
+
+	// 表示分類
+	Class string `json:"class,omitempty"`
+
+	Data []ResultJoboffer `json:"data,omitempty"`
+
+	// 総合計
+	Allcount float32 `json:"allcount,omitempty"`
+
+	// その他の分類合計
+	Otherscount float32 `json:"otherscount,omitempty"`
+}
